--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 		<section class="info">
 			<p>{{ site.title }}: a simple <a href="//en.wikipedia.org/wiki/Pomodoro_Technique">pomodoro timer</a></p>
-			<p id="about"><a onclick="alert('Minty is a pomodoro timer with a focus on speed, simplicity and design. What\'s a pomodoro timer, you ask? Well, a pomodoro timer is a timer that breaks down work into intervals, traditionally 25 minutes in length, separated by short breaks. These intervals are called pomodoros, the plural in English of the Italian word pomodoro, which means tomato. The method is based on the idea that frequent breaks can improve mental agility.')">about</a></p>
+			<p id="about"><a onclick="alert('Minty is a pomodoro timer with a focus on speed, simplicity and design. What\'s a pomodoro timer, you ask? Well, a pomodoro timer is a timer that breaks down work into intervals, traditionally 25 minutes in length, separated by short breaks. These intervals are called pomodoros, the plural in English of the Italian word pomodoro, which means tomato. The method is based on the idea that frequent breaks can improve mental agility.')">about minty</a></p>
 			<p id="footer">(c) 2016 Kabir Goel. Hosted on <a href="//github.com/kbrgl/minty">GitHub</a>.</p>
 		</section>
 	</body>
