redirect to main page after config

--- a/config/index.html
+++ b/config/index.html
@@ -50,6 +50,7 @@
     	</style>
 	</head>
 	<body class="container">
+		<a href="../"><< back</a>
 		<h1>Configure Minty</h1>
 
 		<div id="options">
