--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 		<script type="text/javascript">
     	WebFontConfig = {
-        	google: { families: [ 'Source+Code+Pro:300:latin' ] }
+        	google: { families: [ 'Roboto+Mono::latin', 'Roboto:100:latin' ] }
     	};
 
     	(function() {
@@ -26,14 +26,9 @@
 
 		<title>{{ site.title }}</title>
 		<meta name="description" content="{{ site.description }}"/>
-		
-		<script src="{{ '/js/jquery.min.js' | prepend: site.baseurl }}"></script>
-		<script src="{{ '/js/timer.js' | prepend: site.baseurl }}"></script>
-		<script src="{{ '/js/config.js' | prepend: site.baseurl }}"></script>
-		<script src="{{ '/js/helpers.js' | prepend: site.baseurl }}"></script>
-		<script src="{{ '/js/dom.js' | prepend: site.baseurl }}"></script>
 
-		<script src="{{ '/js/settings.js' | prepend: site.baseurl }}"></script>
+		<script src="{{ '/js/jquery.min.js' | prepend: site.baseurl }}"></script>
+		<script src="{{ '/js/index.js' | prepend: site.baseurl }}"></script>
 
 		<link rel="stylesheet" href="{{ '/css/normalize.css' | prepend: site.baseurl }}"/>
 		<link rel="stylesheet" href="{{ '/css/skeleton.css' | prepend: site.baseurl }}"/>
@@ -67,22 +62,17 @@
 		</div>
 
 		<section id="options">
-			<h1>Configure Minty</h1>
-			<label for="workTime">Number of minutes for work</label>
-			<input type="number" name="workTime" min="1" value="25"/>
-			<label for="breakTime">Number of minutes for break</label>
-			<input type="number" name="breakTime" min="1" value="5"/>
-			<label for="longerBreakTime">Number of minutes for extended break time (given every few cycles)</label>
-			<input type="number" name="longerBreakTime" min="1" value="20"/>
-			<label for="longerBreakRequiredCycles">Number of cycles after which break time is extended</label>
-			<input type="number" name="longerBreakRequiredCycles" min="1" value="4"/>
+			<h4>Configure Minty</h4>
+			<p>
+				I want to work <input type="number" name="workTime" min="1" value="25"/> minutes and take <input type="number" name="breakTime" min="1" value="5"/> minute breaks. I'd like my break time to be extended after <input type="number" name="longerBreakRequiredCycles" min="1" value="4"/>
+				pomodoros. Extended breaks should last for <input type="number" name="longerBreakTime" min="1" value="20"/> minutes.
+			</p>
 			<br/>
-			<button id="submit">SUBMIT</button>
+			<button id="submit">SAVE CHANGES</button>
 		</section>
 
-		<section class="info">
-			<p>{{ site.title }}: a simple <a href="//en.wikipedia.org/wiki/Pomodoro_Technique">pomodoro timer</a></p>
-			<p id="about"><a onclick="alert('Minty is a pomodoro timer with a focus on speed, simplicity and design. What\'s a pomodoro timer, you ask? Well, a pomodoro timer is a timer that breaks down work into intervals, traditionally 25 minutes in length, separated by short breaks. These intervals are called pomodoros, the plural in English of the Italian word pomodoro, which means tomato. The method is based on the idea that frequent breaks can improve mental agility.')">about minty</a></p>
+		<section>
+			<p>Minty: a simple <a href="//en.wikipedia.org/wiki/Pomodoro_Technique">pomodoro timer</a>. <a onclick="alert('Minty is a pomodoro timer with a focus on speed, simplicity and design. What\'s a pomodoro timer, you ask? Well, a pomodoro timer is a timer that breaks down work into intervals, traditionally 25 minutes in length, separated by short breaks. These intervals are called pomodoros, the plural in English of the Italian word pomodoro, which means tomato. The method is based on the idea that frequent breaks can improve mental agility.')">[about minty]</a></p>
 			<p id="footer">(c) 2016 Kabir Goel. Hosted on <a href="//github.com/kbrgl/minty">GitHub</a>.</p>
 		</section>
 	</body>
