--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 		<script type="text/javascript">
     	WebFontConfig = {
-        	google: { families: [ 'Roboto+Mono::latin', 'Roboto:100:latin' ] }
+        	google: { families: [ 'Roboto+Mono::latin', 'Roboto:100,300,400,500:latin' ] }
     	};
 
     	(function() {
@@ -32,7 +32,7 @@
 
 		<link rel="stylesheet" href="{{ '/css/normalize.css' | prepend: site.baseurl }}"/>
 		<link rel="stylesheet" href="{{ '/css/skeleton.css' | prepend: site.baseurl }}"/>
-		<link rel="stylesheet" href="{{ '/font/font-awesome/css/font-awesome.min.css' | prepend: site.baseurl }}">
+		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     	<link rel="stylesheet" href="{{ '/css/index.css' | prepend: site.baseurl }}"/>
 	</head>
 	<body class="container">
@@ -43,33 +43,34 @@
 			</div>
 
 			<nav class="buttons">
-				<button id="start-timer">
-					<i class="fa fa-play"></i>
+				<button class="btn btn-colored btn-shadow" id="start-timer">
+					<i class="material-icons">play_arrow</i>
 				</button>
-				<button id="pause-timer">
-					<i class="fa fa-pause"></i>
+				<button class="btn btn-colored btn-shadow" id="pause-timer">
+					<i class="material-icons">pause</i>
 				</button>
-				<button id="resume-timer">
-					<i class="fa fa-play"></i>
+				<button class="btn btn-colored btn-shadow" id="resume-timer">
+					<i class="material-icons">play_arrow</i>
 				</button>
-				<button id="reset-timer">
-					<i class="fa fa-undo"></i>
+				<button class="btn btn-colored btn-shadow" id="reset-timer">
+					<i class="material-icons">replay</i>
 				</button>
-				<button id="cog">
-					<i class='fa fa-cog'></i>
+				<button class="btn" id="cog">
+					<i class='material-icons'>settings</i>
 				</button>
 			</nav>
 		</div>
 
-		<section id="options">
-			<h4>Configure Minty</h4>
-			<p>
-				I want to work <input type="number" name="workTime" min="1" value="25"/> minutes and take <input type="number" name="breakTime" min="1" value="5"/> minute breaks. I'd like my break time to be extended after <input type="number" name="longerBreakRequiredCycles" min="1" value="4"/>
-				pomodoros. Extended breaks should last for <input type="number" name="longerBreakTime" min="1" value="20"/> minutes.
-			</p>
-			<br/>
-			<button id="submit">SAVE CHANGES</button>
-		</section>
+        <div id="options" class="card">
+            <div class="card-content">
+                <span class="card-title">Configure Minty</span>
+                <p>I want to work <input type="number" name="workTime" min="1" value="25"/> minutes and take <input type="number" name="breakTime" min="1" value="5"/> minute breaks. I'd like my break time to be extended after <input type="number" name="longerBreakRequiredCycles" min="1" value="4"/>
+                pomodoros. Extended breaks should last for <input type="number" name="longerBreakTime" min="1" value="20"/> minutes.</p>
+            </div>
+            <div class="card-action">
+                <a id="submit">Save changes</a>
+            </div>
+        </div>
 
 		<section>
 			<p>Minty: a simple <a href="//en.wikipedia.org/wiki/Pomodoro_Technique">pomodoro timer</a>. <a onclick="alert('Minty is a pomodoro timer with a focus on speed, simplicity and design. What\'s a pomodoro timer, you ask? Well, a pomodoro timer is a timer that breaks down work into intervals, traditionally 25 minutes in length, separated by short breaks. These intervals are called pomodoros, the plural in English of the Italian word pomodoro, which means tomato. The method is based on the idea that frequent breaks can improve mental agility.')">[about minty]</a></p>
