--- a/index.html
+++ b/index.html
@@ -68,6 +68,20 @@
                 pomodoros. Extended breaks should last for <input type="number" name="longerBreakTime" min="1" value="20"/> minutes.</p>
             </div>
             <div class="card-action">
+                <span title="Turn notification sound on or off" class="switch-icon">
+    				<label>
+    					<input name="sound" type="checkbox"/>
+    					<i class="material-icons volume"></i>
+    				</label>
+  				</span>
+  				<span title="Display a confirmation box when leaving Minty" class="switch-icon">
+    				<label>
+    					<input name="alerts" type="checkbox"/>
+    					<i class="material-icons alerts">warning</i>
+    				</label>
+  				</span>
+            </div>
+            <div class="card-action">
                 <a id="submit">Save changes</a>
             </div>
         </div>
