Rewrite backend, squash *lots* of bugs and temporarily disable notifications / sounds

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
                 	<li><p>After every <input type="number" name="longerBreakRequiredCycles" min="1" value="4"/> pomodoros, give an extended break for <input type="number" name="longerBreakTime" min="1" value="20"/> minutes.</p></li>
                 </ul>
             </div>
+            <!--
             <div class="card-action">
                 <span title="Turn notification sound on or off" class="switch-icon">
     				<label>
@@ -83,8 +84,10 @@
     				</label>
   				</span>
             </div>
+            -->
             <div class="card-action">
                 <a id="submit">Save changes</a>
+                <a id="defaultify" style="float:right">Set to defaults</a>
             </div>
         </div>
 
