removed jekyll specific features and stylise name as lowercase

--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
     	})();
 		</script>
 
-		<title>{{ site.title }}</title>
-		<meta name="description" content="{{ site.description }}"/>
+		<title>minty</title>
+		<meta name="description" content="A refreshingly simple way to work."/>
 
-		<script src="{{ '/js/jquery.min.js' | prepend: site.baseurl }}"></script>
-		<script src="{{ '/js/index.js' | prepend: site.baseurl }}"></script>
+		<script src="js/jquery.min.js"></script>
+		<script src="js/index.js"></script>
 
-		<link rel="stylesheet" href="{{ '/css/normalize.css' | prepend: site.baseurl }}"/>
-		<link rel="stylesheet" href="{{ '/css/skeleton.css' | prepend: site.baseurl }}"/>
+		<link rel="stylesheet" href="css/normalize.css"/>
+		<link rel="stylesheet" href="css/skeleton.css"/>
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    	<link rel="stylesheet" href="{{ '/css/index.css' | prepend: site.baseurl }}"/>
+    	<link rel="stylesheet" href="css/index.css"/>
 	</head>
 	<body>
 		<div class="container">
@@ -93,7 +93,7 @@
 	        </div>
 
 			<section>
-				<p>Minty: a simple <a href="//en.wikipedia.org/wiki/Pomodoro_Technique" target="_blank"> pomodoro timer</a>. <a onclick="alert('Minty is a pomodoro timer with a focus on speed, simplicity and design. What\'s a pomodoro timer, you ask? Well, a pomodoro timer is a timer that breaks down work into intervals, traditionally 25 minutes in length, separated by short breaks. These intervals are called pomodoros, the plural in English of the Italian word pomodoro, which means tomato. The method is based on the idea that frequent breaks can improve mental agility.')">[about minty]</a></p>
+				<p>minty: a simple <a href="//en.wikipedia.org/wiki/Pomodoro_Technique" target="_blank"> pomodoro timer</a>. <a onclick="alert('Minty is a pomodoro timer with a focus on speed, simplicity and design. What\'s a pomodoro timer, you ask? Well, a pomodoro timer is a timer that breaks down work into intervals, traditionally 25 minutes in length, separated by short breaks. These intervals are called pomodoros, the plural in English of the Italian word pomodoro, which means tomato. The method is based on the idea that frequent breaks can improve mental agility.')">[about minty]</a></p>
 				<p id="footer">(c) 2016 Kabir Goel. Hosted on <a href="//github.com/kbrgl/minty" target="_blank">GitHub</a>.</p>
 			</section>
 		</div>
