--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 		<script src="js/jquery.min.js"></script>
 		<script src="js/index.js"></script>
 
+		<link rel="icon" href="favicon.png" sizes="256x256" type="image/png"/>
 		<link rel="stylesheet" href="css/normalize.css"/>
 		<link rel="stylesheet" href="css/skeleton.css"/>
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
