--- a/src/index.html
+++ b/src/index.html
@@ -7,37 +7,38 @@
 		<meta name="theme-color">
 
 		<script type="text/javascript">
-    	WebFontConfig = {
-        	google: { families: [ 'Roboto+Mono::latin', 'Roboto:100,300,400,500:latin' ] }
-    	};
+		WebFontConfig = {
+			google: { families: [ 'Roboto+Mono::latin', 'Roboto:100,300,400,500:latin' ] }
+		};
 
-    	(function() {
-        	var wf = document.createElement('script');
-        	wf.src = ('https:' == document.location.protocol ? 'https' : 'http') +
-        	'://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
-        	wf.type = 'text/javascript';
-        	wf.async = 'true';
-        	var s = document.getElementsByTagName('script')[0];
-        	s.parentNode.insertBefore(wf, s);
-    	})();
+		(function() {
+	    	var wf = document.createElement('script');
+	    	wf.src = ('https:' == document.location.protocol ? 'https' : 'http') +
+	    	'://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
+	    	wf.type = 'text/javascript';
+	    	wf.async = 'true';
+	    	var s = document.getElementsByTagName('script')[0];
+	    	s.parentNode.insertBefore(wf, s);
+		})();
 		</script>
 
 		<script>
-  		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  		ga('create', 'UA-74242254-2', 'auto');
-  		ga('send', 'pageview');
+		ga('create', 'UA-74242254-2', 'auto');
+		ga('send', 'pageview');
 		</script>
 
 		<title>minty</title>
 		<meta name="description" content="A refreshingly simple way to work.">
 
 		<script type="text/javascript" src="./lib/jquery.js"></script>
+		<script type="text/javascript" src="./lib/notify.js"></script>
 		<script type="text/javascript" src="./scripts/main.js"></script>
 
 		<link rel="icon" href="./assets/images/favicon.png" sizes="256x256" type="image/png">
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    	<link rel="stylesheet" type="text/css" href="./styles/main.css">
+		<link rel="stylesheet" type="text/css" href="./styles/main.css">
 	</head>
 	<body>
 		<div class="container">
@@ -66,30 +67,14 @@
 				</nav>
 			</div>
 
-	        <div id="options" class="card">
-	            <div class="card-content">
-	                <span class="card-title">Configure Minty</span>
-	                <ul>
-	                	<li><p>One pomodoro is <input type="number" name="workTime" min="1" value="25"/> minutes of work followed by a <input type="number" name="breakTime" min="1" value="5"/> minute break.</p></li>
-	                	<li><p>After every <input type="number" name="longerBreakRequiredCycles" min="1" value="4"/> pomodoros, give an extended break for <input type="number" name="longerBreakTime" min="1" value="20"/> minutes.</p></li>
-	                </ul>
-	            </div>
-	            <!--
-	            <div class="card-action">
-	                <span title="Turn notification sound on or off" class="switch-icon">
-	    				<label>
-	    					<input name="sound" type="checkbox" checked/>
-	    					<i class="material-icons inverted"></i>
-	    				</label>
-	  				</span>
-	  				<span title="Display a confirmation box when leaving Minty" class="switch-icon">
-	    				<label>
-	    					<input name="alerts" type="checkbox"/>
-	    					<i class="material-icons">warning</i>
-	    				</label>
-	  				</span>
-	            </div>
-	            -->
+			<div id="options" class="card">
+				<div class="card-content">
+					<span class="card-title">Configure Minty</span>
+					<ul>
+						<li><p>One pomodoro is <input type="number" name="workTime" min="1" value="25"/> minutes of work followed by a <input type="number" name="breakTime" min="1" value="5"/> minute break.</p></li>
+						<li><p>After every <input type="number" name="longerBreakRequiredCycles" min="1" value="4"/> pomodoros, give an extended break for <input type="number" name="longerBreakTime" min="1" value="20"/> minutes.</p></li>
+	            	</ul>
+				</div>
 	            <div class="card-action">
 	                <a onclick="saveOptions()">Save changes</a>
 	                <a onclick="defaultifyOptions()" style="float:right;"><i class="material-icons">settings_backup_restore</i></a>
