change cursor to pointer for save and defaultify

--- a/src/index.html
+++ b/src/index.html
@@ -75,8 +75,8 @@
 	            	</ul>
 				</div>
 	            <div class="card-action">
-	                <a onclick="saveOptions()">Save changes</a>
-	                <a onclick="defaultifyOptions()" style="float:right;"><i class="material-icons">settings_backup_restore</i></a>
+	                <a onclick="saveOptions()" style="cursor:pointer;">Save changes</a>
+	                <a onclick="defaultifyOptions()" style="float:right;cursor:pointer;"><i class="material-icons">settings_backup_restore</i></a>
 	            </div>
 	        </div>
 
